--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,1 +1,26 @@
 @import "~bootstrap/scss/bootstrap";
+
+:root {
+    --bs-primary: #00000027;
+    --bs-primary-rgb: 0, 0, 0;
+    --bs-bg-opacity: .27;
+    --custom-bg-opacity: .27;
+
+    --bs-body-bg: #ffffff30;
+    --bs-body-color: rgb(207, 207, 207);
+    --bs-heading-color: white;
+    --bs-primary-text-emphasis: white;
+    --bs-primary-bg-subtle: #ffffff30;
+
+    --custom-accordion-button-bg-color: #00000027;
+
+
+}
+
+.accordion-button::after {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e") !important;
+}
+
+.accordion-button {
+    box-shadow: none !important;
+}
